--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games Shop - A sua página de Games</title>   
     <link rel="stylesheet" href="main.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
+    </head>
 <body>
     <header>
         <div class="container">
@@ -25,7 +28,24 @@
 </body>
 <section id="sobre">
     <div class="container">
-        
+        <img class="frente_loja" src="./images/loja.jpg" alt="Faixada loja">
+        <div>
+            <h2>Sobre a loja</h2>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, expedita cupiditate vitae quasi quas nesciunt corporis molestiae labore cumque excepturi minus vel dolorum accusantium explicabo praesentium voluptatem itaque rem deserunt.
+            </p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, expedita cupiditate vitae quasi quas nesciunt corporis molestiae labore cumque excepturi minus vel dolorum accusantium explicabo praesentium voluptatem itaque rem deserunt.
+            </p>
+            <ul class="marcas">
+                <li><img src="images/nintendo.png" alt="Logo Nintendo"></li>
+                <li><img src="images/playstation.png" alt="Logo Playstation"></li>
+                <li><img src="images/xbox.png" alt="Logo Xbox"></li>
+                
+
+            </ul>
+        </div>
+
     </div>
 
 </section>
