--- a/index.html
+++ b/index.html
@@ -9,44 +9,88 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
     </head>
-<body>
-    <header>
-        <div class="container">
-            <h1>Dezzani Game Shop</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#">Sobre a loja</a>
-                </li>
-                <li>
-                    <a href="#">Contato</a>
-                </li>
-            </ul>
-        </nav>
+    <body>
+        <header>
+            <div class="container">
+                <h1>Dezzani Game Shop</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#sobre">Sobre a loja</a>
+                    </li>
+                    <li>
+                        <a href="#contato">Contato</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-    </header>
-</body>
-<section id="sobre">
-    <div class="container">
-        <img class="frente_loja" src="./images/loja.jpg" alt="Faixada loja">
-        <div>
-            <h2>Sobre a loja</h2>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, expedita cupiditate vitae quasi quas nesciunt corporis molestiae labore cumque excepturi minus vel dolorum accusantium explicabo praesentium voluptatem itaque rem deserunt.
-            </p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, expedita cupiditate vitae quasi quas nesciunt corporis molestiae labore cumque excepturi minus vel dolorum accusantium explicabo praesentium voluptatem itaque rem deserunt.
-            </p>
-            <ul class="marcas">
-                <li><img src="images/nintendo.png" alt="Logo Nintendo"></li>
-                <li><img src="images/playstation.png" alt="Logo Playstation"></li>
-                <li><img src="images/xbox.png" alt="Logo Xbox"></li>
-                
-
-            </ul>
+        </header>
+        </body>
+        <section id="sobre">
+            <div class="container">
+                <img class="frente_loja" src="./images/loja.jpg" alt="Faixada loja">
+                <div>
+                    <h2>Sobre a loja</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, expedita cupiditate vitae quasi quas nesciunt corporis molestiae labore cumque excepturi minus vel dolorum accusantium explicabo praesentium voluptatem itaque rem deserunt.
+                    </p>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, expedita cupiditate vitae quasi quas nesciunt corporis molestiae labore cumque excepturi minus vel dolorum accusantium explicabo praesentium voluptatem itaque rem deserunt.
+                    </p>
+                    <ul class="marcas">
+                        <li><img src="images/nintendo.png" alt="Logo Nintendo"></li>
+                        <li><img src="images/playstation.png" alt="Logo Playstation"></li>
+                        <li><img src="images/xbox.png" alt="Logo Xbox"></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section id="contato">
+            <div class="container">
+            <h2>Contato</h2>
+            <div class="contact">
+                <div>
+                <h3>Fale conosco</h3>
+                <form>
+                    <input type="text" placeholder="Seu nome" required/>
+                    <input type="email" placeholder="Seu email" required/>
+                    <input type="tel" placeholder="Seu Telefone (Opcional)"/>
+                    <textarea placeholder="Digite sua mensagem" required></textarea>
+                    <button type="submit">Enviar</button>
+                </form>
+                </div>
+                <div>
+                    <h3>Nos acompanhe</h3>
+                    <ul class="redes">
+                        <li>
+                            <a href="#" title="Siga-nos no Instagram">
+                                <img src="images/instagram.png" alt="Instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" title="Siga-nos no Youtube">
+                                <img src="images/youtube.png" alt="Youtube">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" title="Siga-nos no Facebook">
+                                <img src="images/facebook.png" alt="Facebook">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Venha até nós</h3>
+                    <p>
+                        Av Presidente Itamar Franco - 333 - Centro - Juiz de Fora
+                    </p>
+                </div>
         </div>
-
-    </div>
-
-</section>
-</html>
+        </div>
+        </section>
+        <footer>
+            <p>
+                &copy; Dezzani Games Store - Todos os diretios reservados - 2024
+            </p>
+        </footer>
+        </html>
